@@ -260,106 +260,110 @@ SPI NAND Flash Support List:
 007. GIGADEVICE GD5F1GQ5RE
 008. GIGADEVICE GD5F2GQ5UE
 009. GIGADEVICE GD5F2GQ5RE
-010. GIGADEVICE GD5F2GQ4UB
-011. GIGADEVICE GD5F2GQ4UE
-012. GIGADEVICE GD5F2GQ4UC
-013. GIGADEVICE GD5F4GQ4UB
-014. GIGADEVICE GD5F4GQ4UC
-015. ESMT F50D1G41LB(2M)
-016. ESMT F50L512
-017. ESMT F50L1G
-018. ESMT F50L1G41LB
-019. ESMT F50L2G41LB
-020. WINBOND W25N01GV
-021. WINBOND W25N01GW
-022. WINBOND W25N02KV
-023. WINBOND W25N04KV
-024. WINBOND W25M02GV
-025. MXIC MX35LF1GE4AB
-026. MXIC MX35LF2GE4AB
-027. MXIC MX35LF2G14AC
-028. MXIC MX35LF2GE4AD
-029. MXIC MX35LF1G24AD
-030. MXIC MX35LF2G24AD
-031. MXIC MX35LF4G24AD
-032. MXIC MX35LF2G24AD-Z4I8
-033. MXIC MX35LF4G24AD-Z4I8
-034. MXIC MX35UF1GE4AD
-035. MXIC MX35UF2GE4AD
-036. MXIC MX35UF4GE4AD
-037. ZENTEL A5U12A21ASC
-038. ZENTEL A5U1GA21BWS
-039. ETRON EM73C044SNB
-040. ETRON EM73C044SND
-041. ETRON EM73C044SNF
-042. ETRON EM73C044VCA
-043. ETRON EM73C044VCD
-044. ETRON EM73D044VCA
-045. ETRON EM73D044VCB
-046. ETRON EM73D044VCD
-047. ETRON EM73D044VCG
-048. ETRON EM73D044VCH
-049. ETRON EM73D044SNA
-050. ETRON EM73D044SNC
-051. ETRON EM73D044SND
-052. ETRON EM73D044SNF
-053. ETRON EM73E044SNA
-054. TOSHIBA TC58CVG0S3H
-055. TOSHIBA TC58CVG1S3H
-056. TOSHIBA TC58CVG2S0H
-057. KIOXIA TC58CVG2S0HRAIJ
-058. MICRON MT29F1G01AA
-059. MICRON MT29F2G01AA
-060. MICRON MT29F4G01AA
-061. MICRON MT29F1G01AB
-062. MICRON MT29F2G01AB
-063. MICRON MT29F4G01AB
-064. MICRON MT29F4G01AD
-065. HEYANG HYF1GQ4UAACAE
-066. HEYANG HYF2GQ4UAACAE
-067. HEYANG HYF2GQ4UHCCAE
-068. HEYANG HYF1GQ4UDACAE
-069. HEYANG HYF2GQ4UDACAE
-070. HEYANG HYF2GQ4UTACAE
-071. PN PN26G01A-X
-072. PN PN26G02A-X
-073. PN PN26Q01A-X
-074. ATO ATO25D1GA
-075. ATO ATO25D2GA
-076. ATO ATO25D2GB
-077. FM FM25S01
-078. FM FM25S01A
-079. FM FM25S02A
-080. FM FM25G01B
-081. FM FM25G02B
-082. FM FM25G02C
-083. FM FM25G02
-084. XTX XT26G02B
-085. XTX XT26G01C
-086. XTX XT26G02C
-087. XTX XT26G01A
-088. XTX XT26G02A
-089. MIRA PSU1GS20BN
-090. BIWIN BWJX08U
-091. BIWIN BWET08U
-092. FORESEE FS35ND01GD1F1
-093. FORESEE FS35ND01GS1F1
-094. FORESEE FS35ND02GS2F1
-095. FORESEE FS35ND02GD1F1
-096. FORESEE FS35ND01GS1Y2
-097. FORESEE FS35ND02G-S3Y2
-098. FORESEE FS35ND04G-S2Y2
-099. DS DS35Q2GA
-100. DS DS35M2GA
-101. DS DS35Q1GA
-102. DS DS35M1GA
-103. FISON CS11G0T0A0AA
-104. FISON CS11G1T0A0AA
-105. FISON CS11G0G0A0AA
-106. TYM TYM25D2GA01
-107. TYM TYM25D2GA02
-108. TYM TYM25D1GA03
-109. XINCUN XCSP1AAWH-NT
+010. GIGADEVICE GD5F2GM7UE
+011. GIGADEVICE GD5F2GM7RE
+012. GIGADEVICE GD5F2GQ4UB
+013. GIGADEVICE GD5F2GQ4UE
+014. GIGADEVICE GD5F2GQ4UC
+015. GIGADEVICE GD5F4GQ4UB
+016. GIGADEVICE GD5F4GQ4UC
+017. ESMT F50D1G41LB(2M)
+018. ESMT F50L512
+019. ESMT F50L1G
+020. ESMT F50L1G41LB
+021. ESMT F50L2G41LB
+022. WINBOND W25N01GV
+023. WINBOND W25N01GW
+024. WINBOND W25N02KV
+025. WINBOND W25N04KV
+026. WINBOND W25M02GV
+027. MXIC MX35LF1GE4AB
+028. MXIC MX35LF2GE4AB
+029. MXIC MX35LF2G14AC
+030. MXIC MX35UF1G14AC
+031. MXIC MX35UF2G14AC
+032. MXIC MX35LF2GE4AD
+033. MXIC MX35LF1G24AD
+034. MXIC MX35LF2G24AD
+035. MXIC MX35LF4G24AD
+036. MXIC MX35LF2G24AD-Z4I8
+037. MXIC MX35LF4G24AD-Z4I8
+038. MXIC MX35UF1GE4AD
+039. MXIC MX35UF2GE4AD
+040. MXIC MX35UF4GE4AD
+041. ZENTEL A5U12A21ASC
+042. ZENTEL A5U1GA21BWS
+043. ETRON EM73C044SNB
+044. ETRON EM73C044SND
+045. ETRON EM73C044SNF
+046. ETRON EM73C044VCA
+047. ETRON EM73C044VCD
+048. ETRON EM73D044VCA
+049. ETRON EM73D044VCB
+050. ETRON EM73D044VCD
+051. ETRON EM73D044VCG
+052. ETRON EM73D044VCH
+053. ETRON EM73D044SNA
+054. ETRON EM73D044SNC
+055. ETRON EM73D044SND
+056. ETRON EM73D044SNF
+057. ETRON EM73E044SNA
+058. TOSHIBA TC58CVG0S3H
+059. TOSHIBA TC58CVG1S3H
+060. TOSHIBA TC58CVG2S0H
+061. KIOXIA TC58CVG2S0HRAIJ
+062. MICRON MT29F1G01AA
+063. MICRON MT29F2G01AA
+064. MICRON MT29F4G01AA
+065. MICRON MT29F1G01AB
+066. MICRON MT29F2G01AB
+067. MICRON MT29F4G01AB
+068. MICRON MT29F4G01AD
+069. HEYANG HYF1GQ4UAACAE
+070. HEYANG HYF2GQ4UAACAE
+071. HEYANG HYF2GQ4UHCCAE
+072. HEYANG HYF1GQ4UDACAE
+073. HEYANG HYF2GQ4UDACAE
+074. HEYANG HYF2GQ4UTACAE
+075. PN PN26G01A-X
+076. PN PN26G02A-X
+077. PN PN26Q01A-X
+078. ATO ATO25D1GA
+079. ATO ATO25D2GA
+080. ATO ATO25D2GB
+081. FM FM25S01
+082. FM FM25S01A
+083. FM FM25S02A
+084. FM FM25G01B
+085. FM FM25G02B
+086. FM FM25G02C
+087. FM FM25G02
+088. XTX XT26G02B
+089. XTX XT26G01C
+090. XTX XT26G02C
+091. XTX XT26G01A
+092. XTX XT26G02A
+093. MIRA PSU1GS20BN
+094. BIWIN BWJX08U
+095. BIWIN BWET08U
+096. FORESEE FS35ND01GD1F1
+097. FORESEE FS35ND01GS1F1
+098. FORESEE FS35ND02GS2F1
+099. FORESEE FS35ND02GD1F1
+100. FORESEE FS35ND01GS1Y2
+101. FORESEE FS35ND02G-S3Y2
+102. FORESEE FS35ND04G-S2Y2
+103. DS DS35Q2GA
+104. DS DS35M2GA
+105. DS DS35Q1GA
+106. DS DS35M1GA
+107. FISON CS11G0T0A0AA
+108. FISON CS11G1T0A0AA
+109. FISON CS11G0G0A0AA
+110. TYM TYM25D2GA01
+111. TYM TYM25D2GA02
+112. TYM TYM25D1GA03
+113. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
